# jumpy

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  09-12-2021.html  404.html  ARCHITECTURE.md  Arcadefile  CNAME  CODE_OF_CONDUCT.md  CREDITS.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  PACKAGING.md  README.md  RELEASE.md  build.rs  cliff.toml  code_of_conduct.html  config.json  config.toml  contributing.html  contributing_art.html  contributing_code.html  controls.html  credits.html  deny.toml  documentation.html  editor.html  environmental_weapons.html  gameplay.html  index.html  introduction.html  items.html  juice.html  justfile  lib.bevy.d.ts  (+17 more)
.cargo/: config
.github/: bors.toml
assets/: audio.json  default.core.yaml  default.game.yaml  fonts.json  fonts.schema.json  game.yaml  images.schema.json  items.json  map.json  maps.json  maps.ron  maps.schema.json  music.json  pack.yaml  particle_effects.json  passive_effects.json  player_characters.json  player_characters.schema.json  sounds.json  swordthrow-map.json  textures.json  textures.ron  textures.schema.json  untitled.json
book/: book.toml  code_of_conduct.html  index.html  print.html  (+3 more)
core/: Cargo.toml  README.md
core/macro/: Cargo.toml
core/macro/src/: async_main.rs  event.rs  lib.rs  util.rs
core/macro/src/async_main/: internal.rs  macroquad.rs  mod.rs
core/macro/src/resources/: custom.rs  derive.rs  init.rs  load.rs  mod.rs
core/macros/src/: lib.rs
core/src/: attachment.rs  audio.rs  bullet.rs  camera.rs  color.rs  config.rs  context.rs  damage.rs  data.rs  debug.rs  ecs.rs  editor.rs  elements.rs  error.rs  event.rs  events.rs  file.rs  frame.rs  game.rs  globals.rs  image.rs  input.rs  item.rs  lib.rs  lifetime.rs  map.rs  map_constructor.rs  math.rs  metadata.rs  network.rs  noise.rs  parsing.rs  particles.rs  physics.rs  player.rs  prelude.rs  query_builder.rs  random.rs  rendering.rs  resources.rs  (+14 more)
core/src/backend_impl/: internal.rs  macroquad.rs
core/src/backend_impl/internal/: audio.rs  camera.rs  context.rs  error.rs  event.rs  file.rs  game.rs  gl.rs  gui.rs  image.rs  input.rs  math.rs  particles.rs  rendering.rs  text.rs  texture.rs  video.rs  viewport.rs  window.rs
core/src/backend_impl/internal/math/: mod.rs  rect.rs
core/src/backend_impl/internal/render/: buffer.rs  mod.rs  renderer.rs  vertex.rs  vertex_array.rs
core/src/backend_impl/internal/render/shader/: mod.rs  uniform.rs
core/src/backend_impl/internal/rendering/: buffer.rs  mod.rs  renderer.rs  shader.rs  vertex.rs  vertex_array.rs
core/src/backend_impl/internal/rendering/shader/: mod.rs  uniform.rs
core/src/backend_impl/macroquad/: camera.rs  color.rs  config.rs  error.rs  event.rs  file.rs  game.rs  image.rs  input.rs  math.rs  render.rs  rendering.rs  text.rs  texture.rs  viewport.rs  window.rs
core/src/drawables/: animated_sprite.rs  mod.rs  sprite.rs
core/src/elements/: crab.rs  crate_item.rs  decoration.rs  fish_school.rs  grenade.rs  kick_bomb.rs  mine.rs  musket.rs  musket_bullet.rs  player_spawner.rs  slippery.rs  slippery_seaweed.rs  snail.rs  spike.rs  sproinger.rs  stomp_boots.rs  sword.rs  urchin.rs
core/src/gui/: background.rs  checkbox.rs  combobox.rs  menu.rs  mod.rs  panel.rs  theme.rs
core/src/input/: gamepad.rs  keyboard.rs  mapping.rs  mod.rs  mouse.rs
core/src/json/: helpers.rs  math.rs  mod.rs  render.rs
core/src/json/map/: mod.rs
core/src/lua/: create_component.rs  mod.rs  wrapped_types.rs
core/src/map/: decoration.rs  mod.rs
core/src/map_constructor/: shiftnanigans.rs
core/src/math/: circle.rs  mod.rs  rect.rs  size.rs  urect.rs
core/src/metadata/: common.rs  element.rs  map.rs  player.rs
core/src/network/: api.rs  event.rs  message.rs  mod.rs  status.rs
core/src/parsing/: helpers.rs  math.rs  mod.rs
core/src/parsing/map/: mod.rs  tiled.rs
core/src/physics/: collisions.rs
core/src/physics/collisions/: shape.rs
core/src/physics_impl/: platformer.rs
core/src/player/: state.rs
core/src/player/state/: stage.rs  states.rs
core/src/player/state/states/: crouch.rs  dead.rs  default.rs  idle.rs  incapacitaded.rs  incapacitated.rs  midair.rs  walk.rs
core/src/render/: mod.rs  render_target.rs
core/src/utils/: macros.rs  math.rs  rect.rs
crates/bevy-has-load-progress/: Cargo.toml  README.md
crates/bevy-has-load-progress/macros/: Cargo.toml
crates/bevy-has-load-progress/macros/src/: lib.rs
crates/bevy-has-load-progress/src/: lib.rs
crates/board-ecs/: Cargo.toml  README.md
crates/board-ecs/examples/: pos_vel.rs
crates/board-ecs/src/: bitset.rs  components.rs  dispatcher.rs  entities.rs  error.rs  join.rs  lib.rs  resources.rs  system.rs  uuid.rs  world.rs
crates/board-ecs/src/components/: iterator.rs  typed.rs  untyped.rs
crates/board-ecs/src/components/typed/: ops.rs
crates/jumpy/: Cargo.toml
crates/jumpy/assets/: default.game.yaml
crates/jumpy/assets/locales/en-US/: main.ftl
crates/jumpy/src/: assets.rs  input.rs  loading.rs  main.rs  metadata.rs  platform.rs  prelude.rs
crates/jumpy/src/metadata/: localization.rs  settings.rs  ui.rs
crates/jumpy/src/scripting/: ops.rs
crates/jumpy/src/ui/: debug_tools.rs  extensions.rs  hud.rs  main_menu.rs  pause_menu.rs  widgets.rs
crates/jumpy/src/ui/main_menu/: player_select.rs
crates/jumpy/src/ui/widgets/: bordered_button.rs  progress_bar.rs
crates/matchmaker/: Cargo.toml  README.md
crates/matchmaker/examples/: matchmaker_client.rs
crates/matchmaker/src/: cli.rs  connection.rs  game_server.rs  lib.rs  main.rs  matchmaker.rs  proxy.rs
crates/matchmaker/src/connection/: matchmaker.rs
crates/quinn-bevy/: Cargo.toml  README.md
crates/quinn-bevy/src/: lib.rs
gamepad-rs/: Cargo.toml  LICENSE  README.md
gamepad-rs/examples/: test.rs
gamepad-rs/src/: lib.rs
gamepad-rs/src/platform/: mod.rs
gamepad-rs/src/platform/linux/: ioctl.rs  linux_input.rs  mod.rs
gamepad-rs/src/platform/macos/: hid.rs  mod.rs
gamepad-rs/src/platform/windows/: mod.rs
network-core/: Cargo.toml
network-core/src/: api.rs  backend.rs  error.rs  lib.rs  status.rs
(+14555 files in other folders)
