[package]
authors     = ["The Fish Fight Game & Spicy Lobster Developers"]
default-run = "jumpy"
description = "A tactical 2D shooter"
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "jumpy"
version     = "0.7.0"

[workspace]
members = [".", "core"]

[features]
default = []
# Enable to simulate horrible network latency/slowness
debug-network-slowdown = ["async-timer", "turborand"]

[dependencies]
# bones_bevy_asset    = "0.1.0"
# bones_bevy_renderer = "0.1.1"
# bones_lib           = { version = "0.1.0", features = ["bevy"] }
# type_ulid              = "0.1.0"
# quinn_runtime_bevy     = "0.1.0"

bones_bevy_asset    = { path = "../bones/crates/bones_bevy_asset" }
bones_bevy_renderer = { path = "../bones/crates/bones_bevy_renderer" }
bones_lib           = { path = "../bones", features = ["bevy"] }
quinn_runtime_bevy  = { path = "../bones/crates/quinn_runtime_bevy" }
type_ulid           = { path = "../bones/crates/type_ulid" }

anyhow              = "1.0.58"
async-channel       = "1.7.1"
base64              = "0.21.0"
bevy-inspector-egui = { version = "0.18", default-features = false }
bevy_egui           = "0.20"
bevy_fluent         = "0.6"
bevy_framepace      = "0.12"
bevy_kira_audio     = { version = "0.15", features = ["ogg"], default-features = false }
bevy_prototype_lyon = "0.8"
bevy_tweening       = { version = "0.7", default-features = false }

async-timer            = { version = "0.2.10", optional = true }
bytemuck               = "1.12.3"
clap                   = { version = "4.0.18", features = ["derive", "env"] }
directories            = "4.0.1"
downcast-rs            = "1.2.0"
egui_extras            = "0.21"
either                 = "1.8.0"
fluent                 = "0.16.0"
fluent_content         = "0.0.5"
fnv                    = "1.0.7"
futures-lite           = "1.12.0"
getrandom              = { version = "0.2", features = ["js"] }
jumpy_core             = { path = "./core" }
leafwing-input-manager = { version = "0.9", default-features = false }
log                    = { version = "0.4.17", features = ["release_max_level_debug"] }
normalize-path         = "0.2.0"
once_cell              = "1.17.0"
peg                    = "0.8.0"
puffin                 = "0.15"
puffin_egui            = "0.21.0"
rand                   = "0.8.5"
serde                  = { version = "1.0.137", features = ["derive"] }
serde_json             = "1.0.89"
serde_yaml             = "0.9.2"
thiserror              = "1.0.31"
tracing                = { version = "0.1.37", features = ["release_max_level_debug"] }
unic-langid            = "0.9.0"

[dependencies.turborand]
features = ["atomic"]
optional = true
version  = "0.10"

[dependencies.bevy]
default-features = false
features         = ["x11", "png", "filesystem_watcher", "bevy_gilrs"]
version          = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
web-sys      = { version = "0.3", features = ["Window", "Location", "Storage"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_dylib = "0.10"
mimalloc   = { version = "0.1.32", default-features = false }
# Networking deps
bitfield               = "0.14.0"
bones_matchmaker_proto = "0.1.0"
bytes                  = "1.4.0"
ggrs                   = { version = "0.9.3", features = ["sync-send"] }
mdns-sd                = { version = "0.7.1", default-features = false }
numquant               = "0.2.0"
parking_lot            = "0.12"
ping-rs                = "0.1.2"
postcard               = { version = "1.0.4", features = ["alloc"] }
quinn                  = { version = "0.10", default-features = false, features = ["tls-rustls"] }
rcgen                  = "0.10.0"
rustls                 = { version = "0.21", features = ["dangerous_configuration", "quic"] }
smallvec               = "1.10.0"

# Optimize dependencies even in development
[profile.dev.package."*"]
codegen-units = 1
debug         = 1 # Only keep line numbers
opt-level     = 3

# Optimize our code a little bit.
[profile.dev.package.jumpy_core]
codegen-units = 512
opt-level     = 1

[profile.dev]
codegen-units = 128
opt-level     = 1

[profile.dev-optimized]
debug     = 1
inherits  = "dev"
opt-level = 3

[profile.release]
codegen-units = 1    # Improved rapier physics perf, so it might help other stuff, too
lto           = true

[patch.crates-io]
bevy_simple_tilemap = { git = "https://github.com/forbjok/bevy_simple_tilemap.git", rev = "963d447fa1fd2d6f89228106275b7086840be762" }

# bones_bevy_asset    = { git = "https://github.com/fishfolk/bones" }
# bones_bevy_renderer = { git = "https://github.com/fishfolk/bones" }
# bones_lib           = { git = "https://github.com/fishfolk/bones" }
# type_ulid           = { git = "https://github.com/fishfolk/bones" }

# bones_lib = { path = "../bones/" }
# bones_bevy_asset = { path = "../bones/crates/bones_bevy_asset" }
# type_ulid = { path = "../bones/crates/type_ulid" }
# bones_bevy_renderer = { path = "../bones/crates/bones_bevy_renderer" }
