[package]
authors     = ["The Fish Fight Game & Spicy Lobster Developers"]
default-run = "jumpy"
description = "A tactical 2D shooter"
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "jumpy"
version     = "0.7.0"

[workspace]
members = [".", "core"]

[features]
default = []
# Enable to simulate horrible network latency/slowness
debug-network-slowdown = ["async-timer", "turborand"]

[dependencies]
bones_bevy_asset    = "0.2"
bones_bevy_renderer = "0.2"
bones_lib           = { version = "0.2", features = ["bevy"] }
type_ulid           = "0.2"

anyhow              = "1.0"
async-channel       = "1.7"
bevy-inspector-egui = { version = "0.18", default-features = false }
bevy_egui           = "0.20"
bevy_fluent         = "0.6"
bevy_framepace      = "0.12"
bevy_kira_audio     = { version = "0.15", features = ["ogg"], default-features = false }
bevy_tweening       = { version = "0.7", default-features = false }

async-timer            = { version = "0.7", optional = true }
bytemuck               = "1.12"
clap                   = { version = "4.0", features = ["derive", "env"] }
directories            = "5.0"
downcast-rs            = "1.2"
egui_extras            = "0.21"
either                 = "1.8"
fluent                 = "0.16"
fluent_content         = "0.0"
futures-lite           = "1.12"
getrandom              = { version = "0.2", features = ["js"] }
jumpy_core             = { path = "./core" }
leafwing-input-manager = { version = "0.9", default-features = false }
log                    = { version = "0.4", features = ["release_max_level_debug"] }
normalize-path         = "0.2"
once_cell              = "1.17"
peg                    = "0.8"
puffin                 = "0.16"
puffin_egui            = "0.21"
rand                   = "0.8"
serde                  = { version = "1.0", features = ["derive"] }
serde_yaml             = "0.9"
thiserror              = "1.0"
tracing                = { version = "0.1", features = ["release_max_level_debug"] }
unic-langid            = "0.9"

[dependencies.turborand]
features = ["atomic"]
optional = true
version  = "0.10"

[dependencies.bevy]
default-features = false
features         = ["x11", "png", "filesystem_watcher", "bevy_gilrs"]
version          = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
web-sys      = { version = "0.3", features = ["Window", "Location", "Storage"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_dylib = "0.10"
mimalloc   = { version = "0.1", default-features = false }
# Networking deps
bitfield               = "0.14"
bones_matchmaker_proto = "0.2"
bytes                  = "1.4"
ggrs                   = { version = "0.9", features = ["sync-send"] }
mdns-sd                = { version = "0.7", default-features = false }
numquant               = "0.2"
ping-rs                = "0.1"
postcard               = { version = "1.0", features = ["alloc"] }
quinn                  = { version = "0.10", default-features = false, features = ["tls-rustls"] }
rcgen                  = "0.10"
rustls                 = { version = "0.21", features = ["dangerous_configuration", "quic"] }
smallvec               = "1.10"
quinn_runtime_bevy     = "0.2"

# Optimize dependencies even in development
[profile.dev.package."*"]
codegen-units = 1
debug         = 1 # Only keep line numbers
opt-level     = 3

# Optimize our code a little bit.
[profile.dev.package.jumpy_core]
codegen-units = 512
opt-level     = 1

[profile.dev]
codegen-units = 128
opt-level     = 1

[profile.dev-optimized]
debug     = 1
inherits  = "dev"
opt-level = 3

[profile.release]
codegen-units = 1    # Improved rapier physics perf, so it might help other stuff, too
lto           = true

[package.metadata.cargo-machete]
ignored = [
    "tracing", # Needed to add `release_max_level_debug` feature
    "getrandom", # Needed to add `js` feature
]
