[package]
edition = "2021"
name    = "jumpy_core"
version = "0.1.0"

[dependencies]
bones_bevy_asset = "0.1"
bones_lib        = { version = "0.1", features = ["serde"] }
type_ulid        = "0.1"

bytemuck       = { version = "1.12", features = ["derive"] }
csscolorparser = "0.6"
glam           = { version = "0.22", features = ["bytemuck"] }
hex            = "0.4"
petgraph       = { version = "0.6", features = ["graphmap"], default-features = false }
serde          = { version = "1", features = ["derive"] }
tracing        = "0.1"

[dependencies.bevy]
default-features = false
features         = ["bevy_asset"]
version          = "0.9"

[dependencies.turborand]
features = ["atomic"]
version  = "0.9"
