[package]
edition = "2021"
name    = "jumpy_core"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
bones_bevy_asset = "0.1.0"
bones_lib        = { version = "0.1.0", features = ["serde"] }
type_ulid        = "0.1.0"

bytemuck       = { version = "1.12.3", features = ["derive"] }
csscolorparser = "0.6.2"
glam           = { version = "0.22.0", features = ["bytemuck"] }
hex            = "0.4.3"
serde          = { version = "1.0.152", features = ["derive"] }
tracing        = "0.1.37"
rapier2d       = { version = "0.17.1", features = ["enhanced-determinism", "debug-render"] }
nalgebra       = { version = "0.32", features = ["convert-glam022"] } 
ordered-float  = "3.4.0"

[dependencies.bevy]
default-features = false
features         = ["bevy_asset"]
version          = "0.9.0"

[dependencies.turborand]
features = ["atomic"]
version  = "0.9"
