[package]
name = "gamepad-rs"
version = "0.1.0"
authors = ["jice <jice.nospam@gmail.com>"]
keywords = ["gamepad", "joystick", "input"]

[dependencies]
lazy_static = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.4", features = ["winerror", "xinput"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.5.1"
IOKit-sys = {git="https://github.com/edwin0cheng/iokit-sys.git"}
libc = "0.2"
