[package]
name = "bevy-has-load-progress"
version = "0.1.0"
edition = "2021"

[dependencies.bevy]
version = "0.8.1"
default-features = false
features = [
    "bevy_asset"
]

[dependencies]
macros = { package = "bevy-has-load-progress-macros", path = "./macros" }
bevy_egui = { version = "0.16.1", optional = true }