[package]
name = "board-ecs"
version = "1.2.1"
authors = ["Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>", "Zicklag <zicklag@katharostech.com>", "Contributors"]
edition = "2018"
description = "A tiny but very powerful ECS framework."
keywords = ["game", "ecs"]
categories = ["game-engines"]
license = "Apache-2.0"
repository = "https://github.com/fishfolk/jumpy"

[features]
default = ["keysize16"]

keysize16 = []
keysize20 = []
keysize24 = []
keysize32 = []

[dependencies]
aligned-vec = "0.5.0"
anyhow = "1.0.68"
atomic_refcell = "0.1.8"
# TODO: Replace with our own macros
bevy_derive = "0.8.1"
bitset-core = "0.1.1"
bytemuck = "1.12.3"
either = "1.8.0"
fxhash = "0.2.1"
itertools = "0.10.5"
thiserror = "1.0.37"
# TODO: Replace with our own macros
type-uuid = "0.1.2"
uuid = "1.2.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
glam = "0.22.0"
