[package]
name = "jumpy"
version = "0.4.3"
description = "A tactical 2D shooter"
authors = ["The Fish Fight Game & Spicy Lobster Developers"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies.bevy]
version = "0.8"
default-features = false
features = [
    "x11",
    "png",
    "filesystem_watcher",
    "bevy_gilrs"
]

[dependencies]
anyhow = "1.0.58"
bevy-parallax = "0.2.0"
bevy_egui = "0.16.1"
egui_extras = "0.19.0"
bevy_kira_audio = { version = "0.12.0", features = ["mp3"] }
bevy_rapier2d = { version = "0.16.0", features = ["debug-render"] }
iyes_loopless = "0.7.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.9.2"
thiserror = "1.0.31"
structopt = "0.3.26"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
bevy-has-load-progress = { path = "../bevy-has-load-progress" }
leafwing-input-manager = { version = "0.5.2", default-features = false }
unic-langid = "0.9.0"
bevy_fluent = "0.4.0"
sys-locale = "0.2.1"
fluent = "0.16.0"
directories = "4.0.1"
async-channel = "1.6.1"
once_cell = "1.13.0"
bevy_mod_js_scripting = { git = "https://github.com/jakobhellermann/bevy_mod_js_scripting.git" }

# Debug tools
bevy-inspector-egui = { version = "0.13.0" }
bevy-inspector-egui-rapier = { version = "0.6.0", features = ["rapier2d"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window","Location","Storage"] }