[package]
name = "jumpy_matchmaker"
version = "0.1.0"
edition = "2021"
authors = ["The Fish Fight Game & Spicy Lobster Developers"]

[dependencies]
jumpy = { path = "../../", default-features = false }
jumpy-matchmaker-proto = { path = "../matchmaker-proto" }
anyhow = "1.0.66"
async-executor = "1.4.1"
futures-lite = "1.12.0"
once_cell = "1.15.0"
quinn = { git = "https://github.com/quinn-rs/quinn.git", default-features = false, features = ["futures-io", "native-certs", "tls-rustls"] }
quinn-smol = { path = "../quinn-smol" }
rcgen = "0.10.0"
rustls = { version = "0.20.7", features = ["dangerous_configuration", "quic"] }
postcard = { version = "1.0.2", default-features = false, features = ["alloc"] }
serde = { version = "1.0.147", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
clap = { version = "4.0.18", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
either = "1.8.0"
blocking = "1.2.0"
scc = "0.11.1"

[dev-dependencies]
async-io = "1.9.0"

