[package]
name = "quinn-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = { git = "https://github.com/quinn-rs/quinn.git", default-features = false, features = ["native-certs", "tls-rustls"] }
quinn-udp = { git = "https://github.com/quinn-rs/quinn.git",  default-features = false }
quinn-proto = { git = "https://github.com/quinn-rs/quinn.git",  default-features = false }
bevy_tasks = "0.8.1"
async-executor = "1.4.1"
async-io = "1.9.0"
pin-project = "1.0.12"
futures-lite = "1.12.0"